--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -39,9 +39,8 @@
         </div>
       </nav>
 
-      <h1><a th:href="@{'/'}"> imagestore </a></h1>
-      <div>
-        <h3>List of users</h3>
+      
+      <div class="contentContainer">
         <table>
           <thead>
             <tr>
